# open-sunsama

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.web  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: desktop-release.yml
.skills/desktop-releases/: SKILL.md
.skills/versioning/: SKILL.md
.todo/auto-update/: PRD.md  TODO.md
.todo/calendar-integration/: PRD.md
.todo/command-palette/: PRD.md
.todo/command-palette-mcp/: PRD.md
.todo/defer-task-hotkey/: PRD.md
.todo/desktop-app/: PRD.md
.todo/fix-app-board-route-not-found/: TODO.md
.todo/fix-cross-day-drop-indicator/: TODO.md
.todo/fix-priority-submenu-clipping/: TODO.md
.todo/fix-tasks-build-order/: TODO.md
.todo/focus-mode/: PRD.md
.todo/focus-timer-shortcuts/: PRD.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  menu.rs  tray.rs
apps/desktop/src-tauri/src/commands/: mod.rs  notifications.rs  settings.rs
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/mobile/src-tauri/src/commands/: haptics.rs  mod.rs  notifications.rs
docs/: INTERNAL_LINKING_STRATEGY.md  RAILWAY_SETUP.md
mcp/: README.md  package.json
(+581 files in other folders)
