[package]
name = "open-sunsama-mobile"
version = "0.0.0"
description = "Open Sunsama Mobile App"
authors = ["Open Sunsama"]
edition = "2021"

[lib]
name = "open_sunsama_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-haptics = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-biometric = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
